# intellectual-CG-course

./: .gitignore  CMakeLists.txt  Color.h  Color.hpp  Material.h  Material.hpp  PointLight.h  PointLight.hpp  README.md  Sphere.cpp  Sphere.h  Vec3.cpp  Vec3.h  gl_const.h  gl_const.hpp  main.cpp  settings.cpp  settings.hpp
base/: color.hpp  vec3.cpp
core/: Material.hpp  PointLight.hpp  gl_const.hpp  material.hpp  point_light.hpp  settings.cpp  settings.hpp
geometry_samples/: scene
primitives/: BasePrimitive.h  BasePrimitive.hpp  Sphere.h  Sphere.hpp  Triangle.cpp  Triangle.h  Triangle.hpp  base_primitive.hpp  sphere.hpp  triangle.cpp  triangle.hpp
renderers/: base_renderer.cpp  base_renderer.hpp  sampler_renderer.cpp  sampler_renderer.hpp  wireframe_renderer.cpp  wireframe_renderer.hpp
scene/: scene.cpp  scene.hpp
shaders/: shader.hpp
utils/: Color.hpp  bounding_box.cpp  bounding_box.h  bounding_box.hpp  bvh.cpp  bvh.h  bvh.hpp  color.hpp  geo_loaders.cpp  geo_loaders.hpp  task_queue.cpp  task_queue.hpp  vec3.cpp  vec3.hpp
